fixed train image sizing on mobile

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -33,6 +33,9 @@ th {
   .train-info {
     font-size: 10px;
   }
+  .trainPic {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 375px) {
